2007-08-12 TADA Tadashi <sho@spc.gr.jp>
	* hide-mail-field.rb: add preference page for changing description of
	TSUKKOMI.

2007-07-22 TADA Tadashi <sho@spc.gr.jp>
	* a.rb: i18n.

2007-07-17 TADA Tadashi <sho@spc.gr.jp>
	* edit_today.rb: add 'rel="nofollow"' attribute to add/edit navigation.

2007-07-15 TADA Tadashi <sho@spc.gr.jp>
	* navi_user.rb: do not show navigations to hidden diaries.

2007-07-15  Kazuhiko  <kazuhiko@fdiary.net>
	* category.rb: update category caches in append or replace mode
	only.

2007-07-14  Kazuhiko  <kazuhiko@fdiary.net>
	* highlight.rb: calculate the length of the section anchor not by
	ruby but by javascript.

2007-07-09 TADA Tadashi <sho@spc.gr.jp>
	* recent_trackback3.rb: fix error on changing visibility of TrackBack in
	mobile mode.

2007-05-05 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: print error message from amazon API when preview mode.
	* search_form.rb: i18n.
	* search_form.rb: add extract_search_keyword plugin using disp_referrer.rb.

2007-05-03 TADA Tadashi <sho@spc.gr.jp>
	* search_control.rb: force nofollow in category page.

2007-05-01 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb, category.rb, recent_comment3.rb, recent_trakcback3.rb,
	my-sequel.rb, search_control.rb: add label elements in preferences form.

2007-04-30 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb, ping.rb: add label elements in update form.

2007-04-29 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: support mobile mode more.
	* edit_today.rb: hide edit link on preview mode.

2007-04-26 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: postfixed slashes to host names, prefixed `:?'
	to parenthesis which are not referred.

2007-04-26 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: made regexps stricter, sorted out goo
	search engines, and added support for goo OEM search, such as
	So-net's. Thanks to Akinori MUSHA <knu at idaemons.org>

2007-04-22 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: support mobile mode.
