@@ -1,3 +1,6 @@
+2007-09-23 TADA Tadashi <sho@spc.gr.jp>
+	* makerss.rb: splited CDATA section by each ']]>'.
+
 2007-08-12 TADA Tadashi <sho@spc.gr.jp>
 	* hide-mail-field.rb: add preference page for changing description of
 	TSUKKOMI.
